--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.19)
-project(matrix_project)
+project(tridiagonal_matrix_eigen_values)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(matrix_project main.cpp)
+add_executable(tridiagonal_matrix_eigen_values src/main.cpp)
